# pyhunspell2

./: README.md  pyproject.toml
src/hunspell2/: __init__.py  cli_runner.py  cli_utils.py  hunspell.py
