[project]
name = "hunspell2"
version = "0.1.0"
description = "A modern Python interface to Hunspell, compatible with current Hunspell releases and easy to install across platforms"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Alejandro Rodriguez", email = "alex.rodriguez.oro@gmail.com" },
]
keywords = [
  "dictionary",
  "hunspell",
  "linguistics",
  "nlp",
  "pyhunspell",
  "spell-checker",
  "spellcheck",
  "text-processing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
